# nl2gh

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
evals/: cases.jsonl  metrics.py  report.py  run.py
evals/results/: report.md
src/nl2gh/: cli.py  executor.py  prompts.py  schemas.py
src/nl2gh/providers/: anthropic_provider.py  base.py  google_provider.py  groq_provider.py
tests/: test_executor.py
